@@ -5,6 +5,7 @@
 	a log with new lines, scroll down to the new lines and show them in
 	bold.
 	(log_repaint): Handle things better (fixes screwups when switching logs).
+	(log_repaint): Fix another thinko.
 
 2005-11-16  Vincent Noel  <vincent.noel@gmail.com>
 
